fix(form): input search icon alignment

--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -1,4 +1,5 @@
 @use '../../../../styles/settings' as *;
+@use '../../../../styles/components/suggestions' as *;
 
 .search-box {
   position: relative;
@@ -19,7 +20,7 @@
   }
 
   &::after {
-    content: url('../../../../icons/icon-search.svg');
+    content: url('../../../../icons/search.svg');
     display: block;
     width: 24px;
     height: 24px;
@@ -30,26 +31,11 @@
   }
 
   .suggestions {
-    @include elevation-2;
-    border-radius: $border-radius-mid;
-    background-color: $color-white;
-    max-height: 50px;
-    overflow-y: auto;
-    position: absolute;
-    width: 100%;
-    z-index: 1;
-    top: 60px;
-    left: 0;
-    cursor: pointer;
-    padding: 8px 12px;
-    font-size: 20px;
-    color: $color-grey-black-60;
-    display: none;
+    @extend %suggestions;
+  }
 
-    &:hover {
-      color: $color-grey-black-80;
-      background-color: $color-shade-blue-10;
-    }
+  .suggestion {
+    @extend %suggestion;
   }
 }
 
