--- a/blocks/form/components/typeahead/typeahead.scss
+++ b/blocks/form/components/typeahead/typeahead.scss
@@ -1,51 +1,31 @@
 @use '../../../../styles/settings' as *;
+@use '../../../../styles/components/suggestions' as *;
 
-.typeahead {
+.typeahead__input {
   position: relative;
-
-  &::after {
-    content: '';
-    display: block;
-    width: 1.5rem;
-    height: 1.5rem;
-    position: absolute;
-    right: 1rem;
-    top: 50%;
-    transform: translateY(-50%);
-    pointer-events: none;
-
-    mask: url('../../../../icons/search.svg') no-repeat center / contain;
-    -webkit-mask: url('../../../../icons/search.svg') no-repeat center / contain;
-    background-color: $color-primary-navy;
-  }
 
   input[type='text'] {
     padding-right: 48px; // Extra padding so text not overlapping with icon
+    width: 100%;
+  }
+
+  &::after {
+    content: url('../../../../icons/search.svg');
+    display: block;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
   }
 
   .suggestions {
-    @include elevation-2;
-    border-radius: $border-radius-mid;
-    background-color: $color-white;
-    max-height: 9.375rem;
-    overflow-y: auto;
-    position: absolute;
-    width: 100%;
-    z-index: 1;
-    top: 97px;
-    left: 0;
+    @extend %suggestions;
   }
 
   .suggestion {
-    padding: $spacing-200 $spacing-300;
-    cursor: pointer;
-    font-size: 20px;
-    color: $stroke-secondary;
-
-    &:hover {
-      color: $text-primary;
-      background-color: $color-shade-blue-10;
-    }
+    @extend %suggestion;
   }
 }
 
